Attempted to auto-start. Running as little as possible as root in hopes that this will fix issues with the ivy2 cache. Currently running out of memory on sbt update.